[tool.poetry]
name = "iracing-yn360"
version = "0.1.0"
description = ""
authors = ["Chris Champeau <semaj4712@gmail.com>"]
readme = "README.md"
packages = [{include = "iracing_yn360"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
